--- a/weather-cli/package.json
+++ b/weather-cli/package.json
@@ -18,6 +18,7 @@
     "author": "Andrey Khalepov",
     "license": "ISC",
     "dependencies": {
-        "axios": "^1.6.2"
+        "axios": "^1.6.2",
+        "chalk": "^5.3.0"
     }
 }
